// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`commands/env > env:clone > should return success message 1`] = `
"Successfully cloned environment variables from site-name to site-name-a
Changes will require a redeploy to take effect on any deployed versions of your project."
`;

exports[`commands/env > env:clone > should return without clone if there's no env in source project 1`] = `"site-name has no environment variables, nothing to clone"`;

exports[`commands/env > env:list > should hide variables values and prompt to show 1`] = `
"2 environment variables for project site-name in the dev context 
.-------------------------------------------------------------------------------
--------.
|                                 Environment variables                         
        |
|-------------------------------------------------------------------------------
--------|
|     Key      |                       Value                        |       Scop
e       |
|--------------|----------------------------------------------------|-----------
--------|
| EXISTING_VAR | ************************************************** | Builds, Fu
nctions |
| OTHER_VAR    | ************************************************** | All       
        |
'-------------------------------------------------------------------------------
--------'
? Show values? (y/N) [21D[21C[2K[G? Show values? No[17D[17C"
`;

exports[`commands/env > env:list > should hide variables values and show on confirm 1`] = `
"2 environment variables for project site-name in the dev context 
.-------------------------------------------------------------------------------
--------.
|                                 Environment variables                         
        |
|-------------------------------------------------------------------------------
--------|
|     Key      |                       Value                        |       Scop
e       |
|--------------|----------------------------------------------------|-----------
--------|
| EXISTING_VAR | ************************************************** | Builds, Fu
nctions |
| OTHER_VAR    | ************************************************** | All       
        |
'-------------------------------------------------------------------------------
--------'
? Show values? (y/N) [21D[21C[2K[G? Show values? (y/N) y[22D[22C[2K[G? Show values? Yes[18D[18C
[2K[1A[2K[1A[2K[G
[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G.----------------------------------------------.
|            Environment variables             |
|----------------------------------------------|
|     Key      |   Value   |       Scope       |
|--------------|-----------|-------------------|
| EXISTING_VAR | dev-value | Builds, Functions |
| OTHER_VAR    | all-value | All               |
'----------------------------------------------'
? Show values? Yes"
`;

exports[`commands/env > env:list > should not prompt on CI 1`] = `
"2 environment variables for project site-name in the dev context 
.----------------------------------------------.
|            Environment variables             |
|----------------------------------------------|
|     Key      |   Value   |       Scope       |
|--------------|-----------|-------------------|
| EXISTING_VAR | dev-value | Builds, Functions |
| OTHER_VAR    | all-value | All               |
'----------------------------------------------'"
`;
